MOD-119 Implement loading latest artifact
