# webserver/src/main/java/com/mlaide/webserver/service/ArtifactService.java
@@ -32,6 +32,8 @@ public interface ArtifactService {
 
     ItemList<Artifact> getArtifactsByRunKeys(String projectKey, List<Integer> runKeys);
 
+    Artifact getLatestArtifact(String projectKey, String artifactName);
+
     Artifact getArtifact(String projectKey, String artifactName, Integer artifactVersion);
 
     ArtifactFile getFileInfo(String projectKey, String artifactName, Integer artifactVersion, String fileId);
